--- a/progettoRistorante/UserControl/fornelloVista.xaml
+++ b/progettoRistorante/UserControl/fornelloVista.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="CCStatusOrder.fornelloVista"
+﻿<UserControl x:Class="progettoRistorante.fornelloVista"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CCStatusOrder"
+             xmlns:local="clr-namespace:progettoRistorante"
              mc:Ignorable="d" 
-             d:DesignHeight="280" d:DesignWidth="100">
+             d:DesignHeight="280" d:DesignWidth="120">
     <UserControl.Resources>
         <FontFamily x:Key="SFPro Regular Display">/progettoRistorante;component/Font/Display/SF-Pro-Display-Regular.otf#SF Pro Display Regular</FontFamily>
         <FontFamily x:Key="SFPro Bold Display">/progettoRistorante;component/Font/Display/SF-Pro-Display-Bold.otf#SF Pro Display Bold</FontFamily>
@@ -58,9 +58,7 @@
                                 <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border}"/>
                             </Trigger>
                             <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
-                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
-                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                                <Setter Property="Opacity" Value="0.4"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -68,16 +66,16 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    <Grid Margin="10,0,0,0">
+    <Grid Margin="10,0,10,0">
         <StackPanel>
-            <Button x:Name="btn_skip" Width="40" Height="40" Style="{DynamicResource ButtonStyle2}" BorderBrush="{x:Null}" Background="{DynamicResource Verde scuro}" >
-                <Image Source="/progettoRistorante;component/Icon/fastForward.png" Margin="8"/>
+            <Button x:Name="btn_skip" Width="40" Height="40" Style="{DynamicResource ButtonStyle2}" BorderBrush="{x:Null}" Background="{DynamicResource Verde scuro}" Click="btn_skip_Click" IsEnabled="False" >
+                <Image Source="/icon/fastForward.png" Margin="8"/>
             </Button>
             <Label x:Name="lbl_desc" Content="" HorizontalAlignment="Center" Style="{DynamicResource LabelStyleCommon}" FontSize="14" FontFamily="{DynamicResource SFPro Bold Display}" />
-            <Label x:Name="lbl_porzioni" Content="4 porzioni" HorizontalAlignment="Center" Style="{DynamicResource LabelStyleCommon}" FontSize="14" Margin="-10" FontFamily="{DynamicResource SFPro Bold Display}"/>
+            <Label x:Name="lbl_porzioni" Content=" " HorizontalAlignment="Center" Style="{DynamicResource LabelStyleCommon}" FontSize="14" Margin="-10" FontFamily="{DynamicResource SFPro Bold Display}"/>
             <Grid Height="70" Margin="0,10,0,2">
-                <Image x:Name="icona_status" Source="/progettoRistorante;component/Icon/Pentola.png" />
-                <Image Source="/progettoRistorante;component/Icon/Disponibile_icon.png" Height="30" Width="30" Margin="0,0,0,10" />
+                <Image Source="/icon/Pentola.png" />
+                <Image  x:Name="icona_status" Source="/icon/Disponibile_icon.png" Height="30" Width="30" Margin="0,0,0,10" />
             </Grid>
             <Canvas HorizontalAlignment="Center" >
                 <Rectangle 
@@ -91,10 +89,10 @@
                 </Rectangle>
             </Canvas>
             <Label x:Name="lbl_status" Content="Disponibile" HorizontalAlignment="Center" Margin="0,5" FontFamily="{DynamicResource SFPro Bold Display}" Foreground="{DynamicResource Verde scuro}" FontSize="15"/>
-            <Button Style="{DynamicResource ButtonStyle2}" x:Name="btn_conferma" Width="30" Height="30" Background="{DynamicResource Verde scuro}" Margin="0,0,0,5" BorderThickness="0">
+            <Button Style="{DynamicResource ButtonStyle2}" x:Name="btn_conferma" Width="30" Height="30" Background="{DynamicResource Verde scuro}" Margin="0,0,0,5" BorderThickness="0" IsEnabled="False" Click="btn_conferma_Click">
                 <Image Source="/progettoRistorante;component/Icon/icon_open.png" Margin="6"/>
             </Button>
-            <Button Style="{DynamicResource ButtonStyle2}" x:Name="btn_elimina" Width="30" Height="30" Background="{DynamicResource Rosso}" BorderThickness="0">
+            <Button Style="{DynamicResource ButtonStyle2}" x:Name="btn_elimina" Width="30" Height="30" Background="{DynamicResource Rosso}" BorderThickness="0" IsEnabled="False">
                 <Image Source="/progettoRistorante;component/Icon/icon_close.png" Margin="6"/>
             </Button>
         </StackPanel>
