--- a/CCStatusOrder/fornello.xaml
+++ b/CCStatusOrder/fornello.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CCStatusOrder"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="100">
+             d:DesignHeight="160" d:DesignWidth="100">
     <UserControl.Resources>
         <FontFamily x:Key="SFPro Regular Display">/progettoRistorante;component/Font/Display/SF-Pro-Display-Regular.otf#SF Pro Display Regular</FontFamily>
         <FontFamily x:Key="SFPro Bold Display">/progettoRistorante;component/Font/Display/SF-Pro-Display-Bold.otf#SF Pro Display Bold</FontFamily>
@@ -13,13 +13,13 @@
         <Color x:Key="RectangleColorInCorso">#FFBD44</Color>
         <Color x:Key="RectangleColorPronto">#FF605C</Color>
     </UserControl.Resources>
-    <Grid Height="150" Margin="10,0,0,0">
+    <Grid Height="160" Margin="10,0,0,0">
         <StackPanel>
-            <Label x:Name="lbl_desc" Content="" HorizontalAlignment="Center" Style="{DynamicResource LabelStyleCommon}" FontSize="14" FontFamily="{DynamicResource SFPro Bold Display}" />
-           
-            <Grid Height="70" Margin="0,10,0,2">
-                <Image x:Name="icona_status" Source="/progettoRistorante;component/Icon/Pentola.png" />
-                <Image Source="/progettoRistorante;component/Icon/Disponibile_icon.png" Height="30" Width="30" Margin="0,0,0,10" />
+            <Label x:Name="lbl_desc" Content=""  HorizontalAlignment="Center" Style="{DynamicResource LabelStyleCommon}" FontSize="14" FontFamily="{DynamicResource SFPro Bold Display}" />
+            <Label x:Name="lbl_tavolo" Content=""  HorizontalAlignment="Center" Style="{DynamicResource LabelStyleCommon}" FontSize="14" FontFamily="{DynamicResource SFPro Bold Display}" />
+            <Grid Height="70" Margin="0,0,0,2">
+                <Image x:Name="pentola" Source="/CCStatusOrder;component/icon/Pentola.png" Width="90" Height="70" Panel.ZIndex="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                <Image x:Name="icona_status" Source="/icon/Disponibile_icon.png" Height="30" Width="30" HorizontalAlignment="Center" VerticalAlignment="Center" Panel.ZIndex="2"/>
             </Grid>
             <Canvas HorizontalAlignment="Center" >
                 <Rectangle 
