--- a/progettoRistorante/Finestre/TelefonoPagine/Contactless.xaml
+++ b/progettoRistorante/Finestre/TelefonoPagine/Contactless.xaml
@@ -149,7 +149,7 @@
                     <DropShadowEffect BlurRadius="5" ShadowDepth="4" Opacity="0.25" Direction="270"/>
                 </Button.Effect>
             </Button>
-            <TextBlock Text="Avvicina la carta o infilala" TextWrapping="Wrap" Foreground="{DynamicResource Verde scuro}" Width="204" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="28" FontFamily="{DynamicResource SFPro Regular Display}" Margin="0,0,0,0" TextAlignment="Center" ></TextBlock>
+            <TextBlock Text="Avvicina la carta o inseriscila" TextWrapping="Wrap" Foreground="{DynamicResource Verde scuro}" Width="204" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="28" FontFamily="{DynamicResource SFPro Regular Display}" Margin="0,0,0,0" TextAlignment="Center" ></TextBlock>
         </Grid>
 
     </Grid>
